--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,9 @@ node('staging-through SSH'){
         checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId: '7e5bcf3f-14cb-4fba-acc5-c63b350caabd', url: 'https://github.com/shashimls276/web-app-demo.git']]])
     }
     stage('Build'){
-        echo 'build the project';
+        steps{
+            sh "mvn clean install"
+        }
     }
     stage('Test'){
         echo 'Unit Testing';
